nothing much changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Happie Bday</string>
     <string name="happie_birthday_text">Happie Birthday Dear!</string>
-    <string name="signature_text">From San.</string>
+    <string name="signature_text">From Shalu.</string>
 </resources>
